--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </div>
       <div class="hero-art" aria-hidden="true">
-        <img src="C:\Users\Indra\Desktop\shopping app\1.webp" alt="Freshee Cart hero" />
+        <img src="1.webp" alt="Freshee Cart hero" />
       </div>
     </section>
 
